--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.card {
+  padding-top: 6rem;
+
+}
+
 .jumbotron {
     padding-top: 6rem;
     background-color: #e2edff;
@@ -11,3 +16,12 @@
     padding-top: 5rem;
   }
   
+  #elemen {
+      text-shadow: 1px 1px 1px #ccc;
+      font-size: 1.5em;
+  }
+
+  #daftar {
+    text-shadow: 1px 1px 1px #ccc;
+    font-size: 1.5em;
+}
